--- a/package.json
+++ b/package.json
@@ -2,23 +2,29 @@
   "name": "ACTtree",
   "version": "0.1.2",
   "author": "Sam Brunno CagedMonkey.com.au",
-  "dependencies": {},
+  "dependencies": {
+    "gifsicle": "^3.0.4",
+    "global": "^4.3.2",
+    "grunt-cli": "^1.2.0",
+    "pngquant": "^1.3.0",
+    "ruby": "^0.6.1"
+  },
   "devDependencies": {
     "compass": "^0.1.1",
-    "grunt": "^0.4.5",
+    "grunt": "^1.0.2",
     "grunt-compass": "~0.3.9",
     "grunt-concat": "~0.1.6",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-compass": "~0.9.0",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-copy": "~0.4.0",
-    "grunt-contrib-cssmin": "~0.10.0",
-    "grunt-contrib-imagemin": "~0.7.1",
-    "grunt-contrib-sass": "~0.6.0",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-sass": "^2.0.0",
-    "matchdep": "~0.3.0"
+    "grunt-contrib-clean": "~1.1.0",
+    "grunt-contrib-compass": "~1.1.1",
+    "grunt-contrib-concat": "~1.0.1",
+    "grunt-contrib-copy": "~1.0.0",
+    "grunt-contrib-cssmin": "~2.2.1",
+    "grunt-contrib-imagemin": "~2.0.1",
+    "grunt-contrib-sass": "~1.0.0",
+    "grunt-contrib-uglify": "~3.3.0",
+    "grunt-contrib-watch": "~1.0.0",
+    "grunt-sass": "^2.1.0",
+    "matchdep": "~2.0.0"
   },
   "engines": {
     "node": ">=0.8.0"
